<resources>
    <string name="app_name">Gomel Transport</string>

    <string name="action_settings">Settings</string>
    <string name="action_reload_data">Update data</string>
    <string name="action_favourite">Favorite</string>
    <string name="item_favourite">Favorite</string>
    <string name="item_transport">Transport</string>
    <string name="item_stops">Stops</string>
    <string name="item_timetable">Time Table</string>
    <string name="item_direction_forward">Forward</string>
    <string name="item_direction_backward">Backward</string>
    <string name="last_updated">Updated on %s</string>

    <string name="drawer_header_image" translatable="false">Drawer header image</string>

    <string name="navigation_drawer_open" translatable="false">Open navigation drawer</string>
    <string name="navigation_drawer_close" translatable="false">Close navigation drawer</string>

    <string name="tab_bus">Bus</string>
    <string name="tab_trolley">Trolley</string>
    <string name="tab_stop">Stops</string>
    <string name="progress_data_update">Updating Data…</string>
    <string name="search_hint">Search a stop</string>
    <string name="action_search_stop">Search</string>
    <string name="action_fav_filter">Show filter</string>
    <string name="action_day">Pick day</string>
    <string name="actions_day_today">Today</string>
    <string name="actions_day_working">Working</string>
    <string name="actions_day_weekend">Weekend</string>
    <string name="actions_day_pick">Pick day</string>

    <string name="time_none">-</string>
    <string name="info_weekend_day">Weekend</string>
    <string name="info_working_day">Working day</string>
    <string name="info_today">Today</string>

    <string name="restart_app_for_locale">Please restart your app for changes to take effect</string>

    <string name="pref_check_update_rate_key" translatable="false">check_update_rate_key</string>
    <string name="pref_check_update_rate_title">Data update check interval</string>
    <string name="pref_check_update_rate_summary">How often application will be checking if data updated</string>
    <string name="pref_check_update_rate_default" translatable="false">12</string>
    <string name="pref_bel_key" translatable="false">pref_bel</string>
    <string name="pref_bel_title">Force Belarusian language</string>
    <string name="pref_bel_sum">Pick to use application in Belarusian language</string>
    <string name="pref_category_data_title">Data</string>
    <string name="pref_category_interface_title">Interface</string>
    <string name="pref_show_update_notification_key" translatable="false">pref_show_update_notification_key</string>
    <string name="pref_show_update_notification_title">Show update notification</string>
    <string name="pref_show_update_notification_summary">Show notification when timetable has been updated in background</string>
    <string name="notif_updated_title">Timetable updated</string>
    <string name="notif_updated_text">Timetable actual for %s</string>
    <string name="table_title">Schedule</string>
    <string-array name="pref_check_update_rate_entries">
        <item>1h</item>
        <item>3h</item>
        <item>6h</item>
        <item>12h</item>
        <item>24h</item>
        <item>Manually only</item>
    </string-array>
    <string-array name="pref_check_update_rate_values">
        <item>1</item>
        <item>3</item>
        <item>6</item>
        <item>12</item>
        <item>24</item>
        <item>-1</item>
    </string-array>
</resources>
