<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:title="@string/pref_category_data_title">

        <ListPreference
            android:defaultValue="@string/pref_check_update_rate_default"
            android:entries="@array/pref_check_update_rate_entries"
            android:entryValues="@array/pref_check_update_rate_values"
            android:key="@string/pref_check_update_rate_key"
            android:summary="@string/pref_check_update_rate_summary"
            android:title="@string/pref_check_update_rate_title"/>
    </PreferenceCategory>
    <PreferenceCategory
        android:title="@string/pref_category_interface_title">

        <CheckBoxPreference
            android:defaultValue="false"
            android:key="@string/pref_bel_key"
            android:summary="@string/pref_bel_sum"
            android:title="@string/pref_bel_title"/>

        <CheckBoxPreference
            android:key="@string/pref_show_update_notification_key"
            android:title="@string/pref_show_update_notification_title"
            android:summary="@string/pref_show_update_notification_summary"
            android:defaultValue="false"/>
    </PreferenceCategory>
</PreferenceScreen>