<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_day"
        android:icon="@drawable/ic_today_white_24dp"
        android:title="@string/action_day"
        app:showAsAction="ifRoom">

        <menu>
            <group android:checkableBehavior="single">
                <item
                    android:id="@+id/actions_day_today"
                    android:checked="true"
                    android:title="@string/actions_day_today"/>
                <item
                    android:id="@+id/actions_day_working"
                    android:title="@string/actions_day_working"/>
                <item
                    android:id="@+id/actions_day_weekend"
                    android:title="@string/actions_day_weekend"/>
                <item
                    android:id="@+id/actions_day_pick"
                    android:title="@string/actions_day_pick"/>
            </group>
        </menu>
    </item>

    <item
        android:id="@+id/action_favourite_toggle"
        android:title="@string/action_favourite"
        app:actionProviderClass="com.gomeltrans.ui.actionbar.FavouriteActionProvider"
        app:showAsAction="ifRoom"/>
</menu>