<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools"
      tools:context=".MainActivity">

    <item
        android:id="@+id/action_search_stop"
        android:title="@string/action_search_stop"
        android:icon="@drawable/ic_action_search_white_32dp"
        app:showAsAction="collapseActionView|ifRoom"
        app:actionViewClass="android.support.v7.widget.SearchView"
        android:visible="false"/>

    <item
        android:id="@+id/action_fav_filter"
        android:title="@string/action_fav_filter"
        app:actionProviderClass="com.gomeltrans.ui.actionbar.FavouriteFilterActionProvider"
        app:showAsAction="ifRoom"/>

    <item
        android:id="@+id/action_reload_data"
        android:orderInCategory="100"
        android:title="@string/action_reload_data"
        app:showAsAction="never"/>
</menu>
