<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto">
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/item_favourite"
            android:icon="@drawable/ic_action_star"
            android:title="@string/item_favourite"/>

        <item
            android:id="@+id/item_transport"
            android:icon="@drawable/ic_transport_white_32dp"
            android:title="@string/item_transport"/>

        <item
            android:id="@+id/item_stops"
            android:icon="@drawable/ic_stop_white_32dp"
            android:title="@string/item_stops"/>
    </group>
    <item
        android:id="@+id/item_last_updated"
        android:checkable="false"
        android:title="Updated 6/08/2015 22:15">

        <menu>
            <item android:title="" android:enabled="false"/>
        </menu>

    </item>
</menu>